# ant-nest-simulator

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  debug_ants.rs  prompt.txt
.github/workflows/: ci.yml
src/: components.rs  lib.rs  main.rs
src/systems/: active_disasters_ui.rs  analytics.rs  animation.rs  colony_development.rs  colony_statistics.rs  color_overlay.rs  disaster.rs  disaster_ui.rs  enhanced_ui_animations.rs  environment.rs  foraging.rs  invasive_species.rs  lifecycle.rs  mod.rs  movement.rs  particle.rs  performance_monitoring.rs  persistence.rs  rendering.rs  reproduction.rs  settings_ui.rs  spatial_grid.rs  statistics.rs  statistics_ui.rs  time_control.rs  time_ui.rs  tooltip.rs  visual_effects_toggle.rs
tests/: debug_ant_spawning.rs  ecs_query_conflict_detection.rs  system_initialization.rs
