[package]
name = "ant-nest-simulator"
version = "0.1.0"
edition = "2021"
description = "A realistic ant colony simulation inspired by SimEarth"
license = "MIT"
repository = "https://github.com/traponion/ant-nest-simulator"

[dependencies]
bevy = { version = "0.14", default-features = false, features = [
    "bevy_winit",
    "bevy_render",
    "bevy_core_pipeline",
    "bevy_sprite",
    "bevy_text",
    "bevy_ui",
    "png",
    "x11"
] }
rand = "0.8"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3